[feat] 브런치 조회 변경