@@ -1,9 +1,7 @@
 package bon.bon_jujitsu.service;
 
-import static bon.bon_jujitsu.specification.BranchSpecification.areaContains;
-import static bon.bon_jujitsu.specification.BranchSpecification.regionContains;
-
 import bon.bon_jujitsu.domain.Branch;
+import bon.bon_jujitsu.domain.BranchUser;
 import bon.bon_jujitsu.domain.User;
 import bon.bon_jujitsu.domain.UserRole;
 import bon.bon_jujitsu.dto.common.PageResponse;
@@ -14,7 +12,10 @@ import bon.bon_jujitsu.repository.BranchRepository;
 import bon.bon_jujitsu.repository.BranchUserRepository;
 import bon.bon_jujitsu.repository.UserRepository;
 import bon.bon_jujitsu.specification.BranchSpecification;
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
@@ -22,13 +23,11 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-import bon.bon_jujitsu.domain.BranchUser;
-
-import java.util.List;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
+@Slf4j
 public class BranchService {
 
   private final BranchRepository branchRepository;
@@ -60,49 +59,67 @@ public class BranchService {
     Branch branch = branchRepository.findById(branchId)
         .orElseThrow(() -> new IllegalArgumentException("지부를 찾을 수 없습니다."));
 
-    // OWNER 권한을 가진 유저 찾기
-    User owner = branch.getBranchUsers().stream()
-        .filter(bu -> bu.getUserRole() == UserRole.OWNER)
-        .map(BranchUser::getUser)
-        .findFirst()
-        .orElse(null);
+    try {
+      // OWNER 권한을 가진 유저 찾기 - 삭제된 사용자 제외
+      User owner = branch.getBranchUsers().stream()
+          .filter(bu -> bu.getUserRole() == UserRole.OWNER)
+          .map(BranchUser::getUser)
+          .filter(user -> user != null && !user.isDeleted()) // 삭제된 사용자 제외
+          .findFirst()
+          .orElse(null);
 
-    // COACH 권한을 가진 유저들 리스트
-    List<User> coaches = branch.getBranchUsers().stream()
-        .filter(bu -> bu.getUserRole() == UserRole.COACH)
-        .map(BranchUser::getUser)
-        .toList();
+      // COACH 권한을 가진 유저들 리스트 - 삭제된 사용자 제외
+      List<User> coaches = branch.getBranchUsers().stream()
+          .filter(bu -> bu.getUserRole() == UserRole.COACH)
+          .map(BranchUser::getUser)
+          .filter(user -> user != null && !user.isDeleted()) // 삭제된 사용자 제외
+          .collect(Collectors.toList());
 
-    return BranchResponse.from(branch, owner, coaches);
+      return BranchResponse.from(branch, owner, coaches);
+
+    } catch (Exception e) {
+      log.error("🚨 Branch {} 조회 중 오류 발생: {}", branchId, e.getMessage());
+
+      // 오류 발생 시 안전한 응답 반환 (owner와 coaches 없이)
+      return BranchResponse.fromBranchOnly(branch);
+    }
   }
 
   @Transactional(readOnly = true)
   public PageResponse<BranchResponse> getAllBranch(int page, int size, String region, String area, List<Long> branchIds) {
     PageRequest pageRequest = PageRequest.of(page - 1, size, Sort.by(Sort.Direction.ASC, "region"));
 
-    // BranchSpecification 사용
     Specification<Branch> spec = Specification.where(BranchSpecification.regionContains(region))
-            .and(BranchSpecification.areaContains(area))
-            .and(BranchSpecification.branchIdIn(branchIds)); // BranchSpecification에서 가져오기
+        .and(BranchSpecification.areaContains(area))
+        .and(BranchSpecification.branchIdIn(branchIds));
 
     Page<Branch> branches = branchRepository.findAll(spec, pageRequest);
 
     Page<BranchResponse> branchResponses = branches.map(branch -> {
-      // 각 지부마다 OWNER 찾기
-      User owner = branch.getBranchUsers().stream()
-              .filter(bu -> bu.getUserRole() == UserRole.OWNER)
-              .map(BranchUser::getUser)
-              .findFirst()
-              .orElse(null);
+      try {
+        // OWNER 찾기 - 삭제된 사용자는 제외
+        User owner = branch.getBranchUsers().stream()
+            .filter(bu -> bu.getUserRole() == UserRole.OWNER)
+            .map(BranchUser::getUser)
+            .filter(user -> user != null && !user.isDeleted()) // 여기가 핵심!
+            .findFirst()
+            .orElse(null);
 
-      // 각 지부마다 COACH들 찾기
-      List<User> coaches = branch.getBranchUsers().stream()
-              .filter(bu -> bu.getUserRole() == UserRole.COACH)
-              .map(BranchUser::getUser)
-              .toList();
+        // COACH들 찾기 - 삭제된 사용자는 제외
+        List<User> coaches = branch.getBranchUsers().stream()
+            .filter(bu -> bu.getUserRole() == UserRole.COACH)
+            .map(BranchUser::getUser)
+            .filter(user -> user != null && !user.isDeleted()) // 여기가 핵심!
+            .collect(Collectors.toList());
 
-      // OWNER와 COACH 정보를 포함한 응답 생성
-      return BranchResponse.from(branch, owner, coaches);
+        return BranchResponse.from(branch, owner, coaches);
+
+      } catch (Exception e) {
+        log.error("🚨 Branch {} 처리 중 오류 발생: {}", branch.getId(), e.getMessage());
+
+        // 오류 발생 시 안전한 응답 반환
+        return BranchResponse.fromBranchOnly(branch);
+      }
     });
 
     return PageResponse.fromPage(branchResponses);
